--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://unpkg.com/imask"></script>
-    <meta name="description" content="Conversor de cores RGB para ProfitChart com seletor de cores visual e histórico de cores">
-    <meta name="keywords" content="RGB, ProfitChart, conversor de cores, color picker">
-    <meta property="og:title" content="Conversor RGB para ProfitChart">
-    <meta property="og:description" content="Ferramenta profissional para conversão de cores RGB para ProfitChart">
-    <meta property="og:image" content="URL_DA_SUA_IMAGEM_PREVIEW">
-    <meta property="og:url" content="URL_DO_SEU_SITE">
+    <meta name="description" content="Converta cores RGB e Hex para o formato numérico do ProfitChart (Nelogica). Ferramenta gratuita, online e offline para traders.">
+    <meta name="keywords" content="ProfitChart, Nelogica, RGB, Hex, Cores, Conversor, Trading, Setup, Layout, Profit">
+    <meta name="author" content="Raphael Kvasne">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rkvasne.github.io/profit-colors/">
+    <meta property="og:title" content="🎨 Conversor de Cores para ProfitChart">
+    <meta property="og:description" content="Ferramenta essencial para personalizar seu ProfitChart. Converta RGB e Hex para o código nativo da plataforma.">
+    <meta property="og:image" content="https://rkvasne.github.io/profit-colors/preview-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://rkvasne.github.io/profit-colors/">
+    <meta property="twitter:title" content="🎨 Conversor de Cores para ProfitChart">
+    <meta property="twitter:description" content="Ferramenta essencial para personalizar seu ProfitChart. Converta RGB e Hex para o código nativo da plataforma.">
+    <meta property="twitter:image" content="https://rkvasne.github.io/profit-colors/preview-image.png">
     <meta name="theme-color" content="#4a90e2">
     <style>
         :root {
