--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet"></noscript>
 
     <style>
         :root {
@@ -400,7 +401,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 ProfitColors. Desenvolvido com 💙 por <a href="https://kvasne.com" target="_blank">Raphael Kvasne</a>.</p>
+        <p>&copy; 2025 ProfitColors v0.1.0. Desenvolvido com 💙 por <a href="https://kvasne.com" target="_blank" rel="noopener noreferrer">Raphael Kvasne</a>.</p>
         <p style="font-size: 0.8rem; margin-top: 1rem; opacity: 0.5;">Este projeto não possui afiliação oficial com a Nelogica.</p>
     </footer>
 </body>
