--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
                 <a href="https://github.com/rkvasne" target="_blank" rel="noopener noreferrer" class="dev-link">
                     <i class="fab fa-github"></i> GitHub
                 </a>
+                <a href="https://www.linkedin.com/in/raphael-kvasne/" target="_blank" rel="noopener noreferrer" class="dev-link">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://www.instagram.com/rkvasne/" target="_blank" rel="noopener noreferrer" class="dev-link">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
                 <a href="mailto:rkvasne@gmail.com" class="dev-link">
                     <i class="fas fa-envelope"></i> Contato
                 </a>
